feat: add section, resume, name, img

--- a/index.html
+++ b/index.html
@@ -14,5 +14,21 @@
     />
     <title>REESUME</title>
   </head>
-  <body></body>
+  <body>
+    <div class="box">
+      <section>
+        <div>
+          <p class="resume">RESUME</p>
+          <p class="name">Danil Skachko</p>
+          <img
+            class="logo"
+            src="assets/img/logo.jpg"
+            alt="logo"
+            width="200"
+            height="230"
+          />
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
