feat: add section, contact info

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
           />
         </div>
       </section>
+      <section>
+        <h2 class="h2">Contact info:</h2>
+        <ul>
+          <li>
+            <p>Mobile: (033 342 05 96)</p>
+            <p>
+              Email:<a href="danila-211@mail.ru" target="_blank"
+                >danila-211@mail.ru</a
+              >
+            </p>
+          </li>
+        </ul>
+      </section>
     </div>
   </body>
 </html>
