feat: add section, summary

--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2 class="h2">Summary:</h2>
+        <ul>
+          <li>
+            <p>
+            My goal: to become a good programmer in web development. Fast
+            learner, stress tolerance, a great desire to learn and learn
+            something new.</li>
+            </p>
+          </li>
+        </ul>
+    </section>
     </div>
   </body>
 </html>
