feat: add section, skills

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
           </li>
         </ul>
     </section>
+    <section>
+        <h2 class="h2">Skills:</h2>
+        <ul>
+          <li>
+            <p>HTML/CSS/JAVASCRIPT</p>
+          </li>
+        </ul>
+    </section>
     </div>
   </body>
 </html>
