--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
           </li>
         </ul>  
       </section>
+      <section>
+        <h2 class="h2">Experience:</h2>
+        <ul>
+          <li>
+            <p>I learned JavaScript, I have completed HTML/CSS courses online: Codecademy</p>
+          </li>
+        </ul>
+      </section>
     </div>
   </body>
 </html>
