feat: add section, edducation

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2 class="h2">Edducation:</h2>
+        <ul>
+          <li>
+            <p>Belarusian State Agrarian Technical University - Management. RSSCHOOL courses.</p>
+          </li>
+        </ul>
+      </section>
     </div>
   </body>
 </html>
