feat: add section, english

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2 class="h2">English:</h2>
+        <ul>
+          <li>
+            <p>The level of English is not very high, but I practice it in online courses.</p>
+          </li>
+        </ul>  
+      </section>
     </div>
   </body>
 </html>
