feat: changed the path to the photo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="name">Danil Skachko</p>
           <img
             class="logo"
-            src="assets/img/logo.jpg"
+            src="logo.jpg"
             alt="logo"
             width="200"
             height="230"
